--- a/Lectures/Lecture_12-pre.ipynb
+++ b/Lectures/Lecture_12-pre.ipynb
@@ -59,7 +59,7 @@
    "id": "d491e3d3",
    "metadata": {},
    "source": [
-    "## Why we (sometimes) need log transformations\n",
+    "## Problem: highly skewed data\n",
     "\n",
     "To get a sense of when we may need to transform our data, let's take a look at our `gapminder` dataset once again:"
    ]
@@ -139,12 +139,12 @@
    "id": "c82c6270",
    "metadata": {},
    "source": [
-    "## What to do with data like the above: log transform!"
+    "## Solution: with skewed data, use log transform!"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e0e45a90",
+   "id": "e6bcf47a",
    "metadata": {},
    "source": [
     "**What do we mean by log transforming?**\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f944bcae",
+   "id": "21a3c9d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aac4006",
+   "id": "7d26b935",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c46b97c",
+   "id": "6c844836",
    "metadata": {},
    "source": [
     "Our data looks normally distributed when we plot it on a log scale. Woo hoo!\n",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91083a29",
+   "id": "d0fab429",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38e55db3",
+   "id": "4c55d9fd",
    "metadata": {},
    "source": [
     "Now what? Let's take a look at our *log transformed* population variable.\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02a79dea",
+   "id": "1361e235",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,17 +293,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fc904403",
-   "metadata": {},
-   "source": [
-    "## [OPTIONAL] Why log transformations work for exponential data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f85956e2",
+   "id": "30dc5f6e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -322,6 +314,302 @@
    "metadata": {},
    "source": [
     "# Part 2: z-scoring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "594c370b",
+   "metadata": {},
+   "source": [
+    "## Problem: comparing data from different distributions\n",
+    "\n",
+    "To get a sense of when we may need to z-score our data, let's take a look at our `pokemon` dataset once again:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ba1bbb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pk = pd.read_csv(\"https://raw.githubusercontent.com/UCSD-CSS-002/ucsd-css-002.github.io/master/datasets/Pokemon.csv\")\n",
+    "\n",
+    "pk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee69fcd9",
+   "metadata": {},
+   "source": [
+    "Let's say we want to know whether each of our pokemon is going to be better off attacking opponents, or simply outlasting them. \n",
+    "\n",
+    "The `Attack` variable indicates how strong they are at attacking, while `HP` indicates how long they can withstand attacks. \n",
+    "\n",
+    "How would we evaluate which of these is stronger for each pokemon?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69c3915a",
+   "metadata": {},
+   "source": [
+    "**Strategy 1: look at which variable is larger**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09620ca1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"attacker\" variable says whether a given pokemon has higher attack value than HP\n",
+    "pk['attacker'] = pk['Attack'] > pk['HP']\n",
+    "\n",
+    "pk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f43be39c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can plot this variable across our generations\n",
+    "sns.countplot(data = pk,\n",
+    "              x = 'Generation',\n",
+    "              hue = 'attacker'\n",
+    "             )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb4a6a9e",
+   "metadata": {},
+   "source": [
+    "***However, there's one challenge with this strategy.***\n",
+    "\n",
+    "If many pokemon have higher `Attack` than `HP` values, we can't always tell whether a pokemon has a greater *advantage* when attacking or withstanding an opponent by just looking at which value is higher. \n",
+    "\n",
+    "To see this, take a look at the distribution of `HP` and `Attack` variables below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "249edbf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For the graph below, it's easiest to switch to tidy data!\n",
+    "\n",
+    "pk_tidy = pk.melt(\n",
+    "    id_vars = [\"#\", \"Name\", \"Type 1\", \"Type 2\", \"Generation\", \"Legendary\", \"attacker\"]\n",
+    ")\n",
+    "pk_tidy\n",
+    "\n",
+    "\n",
+    "sns.histplot(\n",
+    "    data = pk_tidy[pk_tidy['variable'].isin([\"HP\", \"Attack\"])],\n",
+    "    x = \"value\",\n",
+    "    hue = \"variable\",\n",
+    "    kde = True,\n",
+    "    bins = 15\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fba3df1",
+   "metadata": {},
+   "source": [
+    "In the graph above, the `Attack` distribution is shifted right and seems more spread out than the `HP` distribution, so most pokemon will likely have higher `Attack` points.\n",
+    "\n",
+    "What we really want to know might be something like: *relative to the competition, does each pokemon have a more impressive `Attack` or `HP` value?*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f14f29a7",
+   "metadata": {},
+   "source": [
+    "## Solution: when comparing across (normal) distributions, try z-scores!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd005b16",
+   "metadata": {},
+   "source": [
+    "**What is a z-score?** \n",
+    "\n",
+    "A z-score for a given observation $x$ is the *number of standard deviations away from the mean* it is.\n",
+    "\n",
+    "$Z = \\dfrac{x - \\mu}{\\sigma}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8ccecd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's pre-compute the mean and standard deviation of each distribution in our data (Attack and HP)\n",
+    "\n",
+    "mean_attack = pk['Attack'].mean() # 79\n",
+    "mean_hp = pk['HP'].mean() # 69\n",
+    "\n",
+    "sd_attack = pk['Attack'].std() # 32.5\n",
+    "sd_hp = pk['HP'].std() # 25.5\n",
+    "\n",
+    "# Note that these are fairly different in roughly the way we described above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "403fb552",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now, let's evaluate the z score for each pokemon's Attack and HP values\n",
+    "\n",
+    "pk['attack_z'] = (pk['Attack'] - mean_attack) / sd_attack\n",
+    "pk['hp_z'] = (pk['HP'] - mean_hp) / sd_hp\n",
+    "\n",
+    "pk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "516a417e",
+   "metadata": {},
+   "source": [
+    "What do z-score distributions look like?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc29574f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.kdeplot(data = pk, x = 'attack_z', color = 'red', alpha = 0.5)\n",
+    "sns.kdeplot(data = pk, x = 'hp_z', color = 'green', alpha = 0.5)\n",
+    "\n",
+    "plt.xlabel(\"Z score\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9934455",
+   "metadata": {},
+   "source": [
+    "These are much more comparable!\n",
+    "\n",
+    "Now, we can ask which pokemon have a higher *z-scored* `Attack` relative to their *z-scored* `HP`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51df063c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pk['z_attacker'] = pk['attack_z'] > pk['hp_z']\n",
+    "\n",
+    "pk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5851a67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can plot this variable across our generations\n",
+    "sns.countplot(data = pk,\n",
+    "              x = 'Generation',\n",
+    "              hue = 'z_attacker'\n",
+    "             )\n",
+    "\n",
+    "# Note it's a little less dramatic than our previous plot!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bca0a93",
+   "metadata": {},
+   "source": [
+    "This plot provides a little more balanced picture than our previous one. \n",
+    "\n",
+    "We can also use the z-scores to compare each pokemon's `Attack` and `HP` in a more fine-grained way:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56a94273",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's see which pokemon have the largest difference (in standard deviation units) between their `Attack` and `HP`\n",
+    "pk['attack_diff_normalized'] = pk['attack_z'] - pk['hp_z']\n",
+    "\n",
+    "pk.nlargest(10, 'attack_diff_normalized')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7217fdd",
+   "metadata": {},
+   "source": [
+    "We can plot this distribution and use it to evaluate the relative strength of a given pokemon's `Attack`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31113c5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.kdeplot(data = pk,\n",
+    "            x = 'attack_diff_normalized'\n",
+    "           )\n",
+    "\n",
+    "\n",
+    "g.axvline(pk[pk['Name'] == 'Shedinja']['attack_diff_normalized'].iloc[0],\n",
+    "            color = 'r',\n",
+    "            ls = '--'\n",
+    "           )\n",
+    "\n",
+    "g.text(3.25, 0.3, \"Shedinja\")\n",
+    "\n",
+    "g.set_xlim(-5, 5)\n",
+    "g.set_title(\"Distribution of differences in Attack and HP z-scores\")\n",
+    "g.set_xlabel(\"Normalized Attack - HP\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18cf848d",
+   "metadata": {},
+   "source": [
+    "## Z-scores: Summary\n",
+    "\n",
+    "- Sometimes for analysis purposes, you'll want to compare variables that are measured on different scales or show differences in the underlying distribution (ex. how to compare SAT and ACT scores?)\n",
+    "\n",
+    "- To make these comparisons, it's often easier to convert the data to a similar scale for comparison.\n",
+    "\n",
+    "- A z-score converts each data point to a *number of standard deviations above or below the mean*, which means you can more easily compare two scores that are otherwise very different or use these scores as the basis for regression or other analyses.\n"
    ]
   }
  ],
