--- a/Lectures/Lecture_12-post.ipynb
+++ b/Lectures/Lecture_12-post.ipynb
@@ -96,7 +96,7 @@
     "g = sns.histplot(\n",
     "    data = gap[gap[\"year\"] == 2007],\n",
     "    x = \"pop\",\n",
-    "    bins = 20 # even with more bins the distribution is similar\n",
+    "    bins = 60 # even with more bins the distribution is similar\n",
     ")\n",
     "g.set_xlabel(\"Population (billions)\")\n",
     "g.set_title(\"Population by country, 2007\")"
@@ -245,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To do this, use np.log10 (np.log uses the *natural log*)\n",
+    "# To do this, use np.log10 (np.log uses the *natural log*) \n",
     "gap['log_pop'] = np.log10(gap['pop'])\n",
     "\n",
     "gap"
@@ -405,7 +405,6 @@
    "outputs": [],
    "source": [
     "# For the graph below, it's easiest to switch to tidy data!\n",
-    "\n",
     "pk_tidy = pk.melt(\n",
     "    id_vars = [\"#\", \"Name\", \"Type 1\", \"Type 2\", \"Generation\", \"Legendary\", \"attacker\"]\n",
     ")\n",
@@ -586,9 +585,9 @@
     "           )\n",
     "\n",
     "\n",
-    "g.axvline(pk[pk['Name'] == 'Shedinja']['attack_diff_normalized'].iloc[0],\n",
-    "            color = 'r',\n",
-    "            ls = '--'\n",
+    "g.axvline(pk[pk['Name'] == 'Shedinja']['attack_diff_normalized'].iloc[0], # value to draw the line at\n",
+    "            color = 'red', # color\n",
+    "            ls = '--' # `linestyle`: '-', ':'\n",
     "           )\n",
     "\n",
     "g.text(3.25, 0.3, \"Shedinja\")\n",
