--- a/Lectures/Week5_Overview.ipynb
+++ b/Lectures/Week5_Overview.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Week 5\n",
     "\n",
-    "**Lecture 13:**\n",
+    "**Lecture 13:** Linear regression overview\n",
     "\n",
     "**Lecture 14:**\n",
     "\n",
