--- a/Lectures/Lecture_13-post.ipynb
+++ b/Lectures/Lecture_13-post.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "## How can we describe the relationship between $y$ and $x$ here?\n",
     "\n",
-    "1. \"Larger $y$ values lead to larger $x$ values\"\n",
+    "1. \"Larger $y$ values lead to larger $x$ values\" => could be more precise...\n",
     "2. \"The *covariance* between $x$ and $y$ is 5.5\" => will change with values of $x$ and $y$\n",
     "2. \"The *correlation* between $x$ and $y$ is 0.8\" => does not tell us about *slope*\n",
     "3. \"Every time $x$ increases by 1, $y$ increases by about 0.5\" => requires estimating a slope value"
@@ -437,6 +437,12 @@
    "source": [
     "### CODE HERE ###\n",
     "\n",
+    "# beta0, beta1 values and their corresponding SSE\n",
+    "(1.1, 0.7, 18.27) # x3\n",
+    "(1.05, 0.7, 18.409)\n",
+    "(1, 0.7, 18.6) # x3\n",
+    "(3.5, 0.5, 16.5)\n",
+    "\n",
     "\n"
    ]
   },
@@ -477,27 +483,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize our parameters to find the beta0 and beta1 that minimize SSE\n",
     "best_beta0 = -np.inf \n",
     "best_beta1 = -np.inf\n",
     "min_sse = np.inf\n",
     "\n",
+    "# Write a function to calculate SSE for easier logic below\n",
     "def sse(b0, b1, data):\n",
     "    return np.sum((data.y - (b0 + b1 * data.x))**2)\n",
     "\n",
-    "# Test the above!\n",
-    "sse(b0 = 1, b1 = 0.75, data = dat)\n",
+    "# Test the fxn above!\n",
+    "# print(sse(b0 = 1, b1 = 0.75, data = dat))\n",
+    "\n",
+    "# Side project: store the param values we consider and their corresponding SSE in a separate dataframe\n",
+    "# We'll use this to make a heatmap showing SSE for the parameter fits\n",
+    "b0_vals = []\n",
+    "b1_vals = []\n",
+    "sse_vals = []\n",
     "\n",
     "# Find our best fitting b0 and b1 values by searching over a reasonable range\n",
-    "# Takes ~30s to run\n",
-    "for b0 in np.arange(start = -10, stop = 10, step = 0.1): # what beta_0 values do we want to consider?\n",
-    "    for b1 in np.arange(start = -10, stop = 10, step = 0.1): # what beta_1 values do we want to consider?\n",
+    "# Takes ~30-60s to run\n",
+    "for b0 in np.arange(start = -5, stop = 5, step = 0.1): # what beta_0 values do we want to consider?\n",
+    "    for b1 in np.arange(start = -5, stop = 5, step = 0.1): # what beta_1 values do we want to consider?\n",
     "        sse_tmp = sse(b0, b1, dat)\n",
+    "        b0_vals.append(b0)\n",
+    "        b1_vals.append(b1)\n",
+    "        sse_vals.append(sse_tmp)\n",
     "        if sse_tmp < min_sse:\n",
     "            best_beta0 = b0\n",
     "            best_beta1 = b1\n",
     "            min_sse = sse_tmp\n",
-    "            \n",
-    "print(\"Best fits by grid search: beta0 = {}, beta1 = {}\".format(best_beta0, best_beta1))\n",
+    "\n",
+    "print(\"Best fits by grid search: beta0 = {}, beta1 = {}, sse = {}\".format(best_beta0, best_beta1, min_sse))\n",
     "        "
    ]
   },
@@ -536,7 +553,34 @@
     "\n",
     "In other settings, we can do better by trying out values which are closer and closer to the best fitting value, rather than just trying everything in a range.\n",
     "\n",
+    "Below let's look at the heatmap of SSE across our parameter values (this is the sort of thing that more complex optimization approaches might use to find the parameter values quickly)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9b65adb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = pd.DataFrame({\n",
+    "    \"b0\": b0_vals,\n",
+    "    \"b1\": b1_vals,\n",
+    "    \"sse\": sse_vals\n",
+    "})\n",
     "\n",
+    "params_subset = params[(params.b0 > 2) & (params.b0 < 4) & (params.b1 > 0) & (params.b1 < 1)]\n",
+    "\n",
+    "params_subset = params_subset.pivot(\"b0\", \"b1\", \"sse\")\n",
+    "params_subset\n",
+    "g = sns.heatmap(params_subset, cmap=\"YlGnBu\", vmin = 10, vmax = 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3557c665",
+   "metadata": {},
+   "source": [
     "**Option 2:** Solve for $\\beta_0$ and $\\beta_1$\n",
     "\n",
     "For linear regression, it turns out that the best fitting solution can be specified *analytically*: we know ahead of time what the best fitting parameter values will be!\n",
