--- a/Lectures/Week5_Overview.ipynb
+++ b/Lectures/Week5_Overview.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Lecture 13:** Linear regression overview\n",
     "\n",
-    "**Lecture 14:**\n",
+    "**Lecture 14:** Evaluating linear regression\n",
     "\n",
     "**Lecture 15:**"
    ]
