--- a/Lectures/Lecture_14-post.ipynb
+++ b/Lectures/Lecture_14-post.ipynb
@@ -28,7 +28,7 @@
     "- Linear regression basics (ordinary least squares)\n",
     "\n",
     "**Today's agenda:**\n",
-    "- Understanding and evaluating linear regression\n"
+    "- Evaluating linear regression\n"
    ]
   },
   {
@@ -136,12 +136,14 @@
     "# Prepare our data\n",
     "x_vals = np.array(mpg_clean['weight'])\n",
     "x_vals = x_vals.reshape(len(x_vals), 1) # what's going on here?\n",
-    "x_vals.shape\n",
-    "x_vals[0, 0]\n",
+    "# x_vals[0]\n",
+    "# x_vals[0, 0]\n",
+    "# list(x_vals)\n",
+    "# x_vals\n",
+    "# TODO is there a more intuitive explanation for this?\n",
     "\n",
     "\n",
     "y_vals = np.array(mpg_clean['horsepower'])\n",
-    "y_vals = y_vals.reshape(len(y_vals), 1)\n",
     "\n",
     "\n",
     "# Initialize the model\n",
@@ -169,7 +171,7 @@
    "source": [
     "# Look at the values\n",
     "mod.intercept_\n",
-    "mod.coef_ # why is this different from the above?\n",
+    "# mod.coef_ # why is this different from the above?\n",
     "\n",
     "# Other attributes we won't get into here"
    ]
@@ -196,7 +198,7 @@
     "                y = \"horsepower\"\n",
     "               )\n",
     "\n",
-    "plt.axline(xy1 = (0, mod.intercept_[0]), slope = mod.coef_[0, 0], color = \"r\", linestyle = \"--\")"
+    "plt.axline(xy1 = (0, mod.intercept_), slope = mod.coef_[0], color = \"r\", linestyle = \"--\")"
    ]
   },
   {
@@ -232,7 +234,9 @@
    "id": "a8fee9d6",
    "metadata": {},
    "source": [
-    "*What variables did you choose? How did your regression do?*"
+    "*What variables did you choose? How did your regression do?*\n",
+    "- weight / acceleration\n",
+    "- weight / mpg\n"
    ]
   },
   {
@@ -264,9 +268,11 @@
    "source": [
     "# Other functions we can use\n",
     "\n",
-    "mod.predict(X = x_vals) # what is this doing?\n",
+    "mod_preds = mod.predict(X = x_vals) # what is this doing?\n",
+    "# mod_preds\n",
     "\n",
-    "mod.score(X = x_vals, y = y_vals) # what is this? \n",
+    "mod_score = mod.score(X = x_vals, y = y_vals) # what is this? \n",
+    "mod_score\n",
     "\n",
     "# These are the primary ones"
    ]
@@ -282,7 +288,6 @@
     "\n",
     "How do we know if our regression is a good fit to the data? What gives you confidence that it's describing the relationship between the variables well?\n",
     "\n",
-    "...\n",
     "\n"
    ]
   },
@@ -339,7 +344,8 @@
     "\n",
     "# Add predicted y values to dataframe\n",
     "preds = mod.predict(X = x_vals)\n",
-    "mpg_clean = mpg_clean.assign(model_pred = pd.Series([x[0] for x in preds]))\n",
+    "mpg_clean = mpg_clean.assign(model_pred = pd.Series([x for x in preds]))\n",
+    "mpg_clean\n",
     "\n",
     "# Calculate RSS based on predicted values\n",
     "mpg_clean = mpg_clean.assign(resid_sum_sq = (mpg_clean['horsepower'] - mpg_clean['model_pred'])**2)\n",
@@ -352,8 +358,8 @@
     "rsq_hand\n",
     "\n",
     "# What is the R^2 value?\n",
-    "print(\"Model value: {}\".format(f_mod))\n",
-    "print(\"Hand calculation: {}\".format(f_hand))"
+    "print(\"Model value: {}\".format(rsq_mod))\n",
+    "print(\"Hand calculation: {}\".format(rsq_hand))"
    ]
   },
   {
@@ -383,14 +389,17 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "x_vals = np.array(mpg_clean['weight'])\n",
-    "x_vals = x_vals.reshape(len(x_vals), 1)\n",
+    "x_vals = np.array(mpg_clean['weight']).reshape(len(x_vals), 1)\n",
     "y_vals = mpg_clean['horsepower']\n",
     "\n",
-    "xtrain, xtest, ytrain, ytest = train_test_split(x_vals, y_vals, test_size = 0.25)\n",
+    "xtrain, xtest, ytrain, ytest = train_test_split(x_vals, y_vals, \n",
+    "                                                test_size = 0.25, \n",
+    "                                                random_state = 1\n",
+    "                                               )\n",
+    "\n",
     "\n",
     "# mpg_clean.shape\n",
-    "# len(Xtest)\n",
+    "# len(xtrain)\n",
     "\n"
    ]
   },
