--- a/Lectures/Lecture_14-pre.ipynb
+++ b/Lectures/Lecture_14-pre.ipynb
@@ -352,8 +352,8 @@
     "rsq_hand\n",
     "\n",
     "# What is the R^2 value?\n",
-    "print(\"Model value: {}\".format(f_mod))\n",
-    "print(\"Hand calculation: {}\".format(f_hand))"
+    "print(\"Model value: {}\".format(rsq_mod))\n",
+    "print(\"Hand calculation: {}\".format(rsq_hand))"
    ]
   },
   {
