--- a/Lectures/Week5_Overview.ipynb
+++ b/Lectures/Week5_Overview.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "**Lecture 14:** Evaluating linear regression\n",
     "\n",
-    "**Lecture 15:**"
+    "**Lecture 15:** Polynomial and multiple regression"
    ]
   }
  ],
