--- a/Lectures/Lecture_15-post.ipynb
+++ b/Lectures/Lecture_15-post.ipynb
@@ -101,7 +101,6 @@
    "outputs": [],
    "source": [
     "# The scikit-learn LinearRegression class surfaces a function called `score` that computes R^2\n",
-    "\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "# Format values\n",
@@ -177,8 +176,10 @@
     "# Randomly sample 25% of our data points to be test data\n",
     "xtrain, xtest, ytrain, ytest = train_test_split(x_vals, \n",
     "                                                y_vals, \n",
-    "                                                test_size = 0.25\n",
+    "                                                test_size = 0.25,\n",
+    "#                                                 random_state = 500\n",
     "                                               )\n",
+    "\n",
     "# Fit the model on the training data\n",
     "mod_tr = LinearRegression().fit(X = xtrain, y = ytrain)\n",
     "\n",
@@ -361,7 +362,8 @@
     "\n",
     "p1 = np.poly1d(deg1_fits)\n",
     "p2 = np.poly1d(deg2_fits)\n",
-    "p3 = np.poly1d(deg3_fits)"
+    "p3 = np.poly1d(deg3_fits)\n",
+    "\n"
    ]
   },
   {
@@ -373,7 +375,7 @@
    "source": [
     "# What do the functions fitted above predict for our data?\n",
     "\n",
-    "preds = mpg_clean.loc[:, ('horsepower', 'mpg')]\n",
+    "preds = mpg_clean.loc[:, ('horsepower', 'mpg')] # \n",
     "\n",
     "preds['deg1_pred'] = p1(preds['horsepower'])\n",
     "preds['deg2_pred'] = p2(preds['horsepower'])\n",
@@ -435,7 +437,7 @@
     "mod1 = LinearRegression().fit(x_vals, y_vals)\n",
     "\n",
     "# 2nd order polynomial\n",
-    "poly2 = PolynomialFeatures(degree = 2, include_bias = False)\n",
+    "poly2 = PolynomialFeatures(degree = 2, include_bias = False) # need `include_bias` = False\n",
     "x2_features = poly2.fit_transform(x_vals)\n",
     "mod2 = LinearRegression().fit(x2_features, y_vals)\n",
     "\n",
@@ -446,7 +448,8 @@
     "mod3 = LinearRegression().fit(x3_features, y_vals)\n",
     "\n",
     "\n",
-    "mod2.coef_\n",
+    "mod2.intercept_\n",
+    "# mod2.coef_\n",
     "# mod3.coef_"
    ]
   },
