lecture 16 first half

--- a/Lectures/Week6_Overview.ipynb
+++ b/Lectures/Week6_Overview.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# Week 6\n",
     "\n",
-    "**Lecture 16:**\n",
+    "**Lecture 16:** Regression: overfitting\n",
     "\n",
-    "**Lecture 17:**\n",
+    "**Lecture 17:** Classification: intro\n",
     "\n",
-    "**Lecture 18:**"
+    "**Lecture 18:** Classification: logistic regression"
    ]
   }
  ],
