--- a/Lectures/Lecture_16-pre.ipynb
+++ b/Lectures/Lecture_16-pre.ipynb
@@ -72,7 +72,9 @@
     "\n",
     "Let's start with a familiar example.\n",
     "\n",
-    "In Problem Set 3 and elsewhere, we've looked at the *gapminder* dataset, which explores the relationship between GDP, population, and life expectancy at the national level and over time. "
+    "In Problem Set 3 and elsewhere, we've looked at the *gapminder* dataset, which explores the relationship between GDP, population, and life expectancy at the national level and over time. \n",
+    "\n",
+    "Here, we'll just look at these variables for the most recent year (2007)."
    ]
   },
   {
@@ -85,7 +87,8 @@
     "gap = pd.read_csv(\"https://raw.githubusercontent.com/UCSD-CSS-002/ucsd-css-002.github.io/master/datasets/gapminder.csv\")\n",
     "\n",
     "# Let's keep just some of the variables (note for pset!)\n",
-    "gap_subset = gap.loc[gap['year'] == 2007, ('country', 'year', 'lifeExp', 'pop', 'gdpPercap')]\n",
+    "# NOTE: we're also just restricting ourselves to 2007\n",
+    "gap_subset = gap.loc[gap['year'] == 2007, ('country', 'year', 'lifeExp', 'pop', 'gdpPercap')].reset_index(drop = True)\n",
     "\n",
     "# Add log population\n",
     "gap_subset['logPop'] = np.log10(gap_subset['pop'])\n",
@@ -297,12 +300,405 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c0cf97d",
+   "metadata": {},
+   "source": [
+    "# Overfitting\n",
+    "\n",
+    "\n",
+    "## What is it?\n",
+    "\n",
+    "The basic principle behind overfitting is that when your modeling approach is sufficiently *unconstrained*, you can fit patterns in your data that *do not generalize*. \n",
+    "\n",
+    "What does it mean for a model to be unconstrained? What does it mean for the model not to generalize?\n",
+    "\n",
+    "...\n",
+    "\n",
+    "\n",
+    "*How does this happen?* \n",
+    "\n",
+    "There are lots of ways this can arise (and what it looks like differs across modeling techniques).\n",
+    "\n",
+    "Let's look at a canonical example just to get an intuition. For models that we learn about throughout the rest of the quarter, it's a useful exercise to think about what overfitting might look like."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8365fc05",
+   "metadata": {},
+   "source": [
+    "## Example\n",
+    "\n",
+    "Let's return to our `gapminder` dataset and the task of predicting *life expectancy* ($y$ based on *income* ($x$).\n",
+    "\n",
+    "What kind of relationship do we think these variables have in the data below?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61f6392c",
+   "id": "b78a3b05",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gap_subset\n",
+    "\n",
+    "\n",
+    "g = sns.scatterplot(data = gap_subset, \n",
+    "                    x = \"logGdpPercap\", # x1 \n",
+    "                    y = \"lifeExp\",\n",
+    "                    color = \"r\",\n",
+    "                    alpha = 0.5\n",
+    "                   )\n",
+    "plt.title(\"Life expectancy as a function of income\")\n",
+    "plt.xlabel(\"Income (log GDP / capita)\")\n",
+    "plt.ylabel(\"Life expectancy\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00a787c7",
+   "metadata": {},
+   "source": [
+    "Let's start with a **simple linear regression**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b090fb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Estimate the model\n",
+    "x_vals = np.array(gap_subset['logGdpPercap']).reshape(len(gap_subset), 1)\n",
+    "y_vals = np.array(gap_subset['lifeExp'])\n",
+    "deg1_fits = LinearRegression().fit(X = x_vals, y = y_vals)\n",
+    "\n",
+    "# Add predictions for this model to our dataframe\n",
+    "preds = gap_subset.loc[:, (\"logGdpPercap\", \"lifeExp\")].reset_index(drop = True)\n",
+    "preds['deg1_pred'] = deg1_fits.predict(X = x_vals)\n",
+    "\n",
+    "preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bf8b4a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the fit\n",
+    "\n",
+    "sns.scatterplot(data = preds, \n",
+    "                x = \"logGdpPercap\",\n",
+    "                y = \"lifeExp\",\n",
+    "                color = \"m\",\n",
+    "                alpha = 0.5\n",
+    "               )\n",
+    "sns.lineplot(data = preds,\n",
+    "             x = \"logGdpPercap\",\n",
+    "             y = \"deg1_pred\"\n",
+    "            )\n",
+    "\n",
+    "\n",
+    "plt.title(\"Life expectancy as a function of income\")\n",
+    "plt.xlabel(\"Income (log GDP / capita)\")\n",
+    "plt.ylabel(\"Life expectancy\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7a90a38",
+   "metadata": {},
+   "source": [
+    "How did we do? Maybe this data is *quadratic* or *cubic*?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11c9ec86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
+    "# Fit degree 2 polynomial regression\n",
+    "poly2 = PolynomialFeatures(degree = 2, include_bias = False)\n",
+    "x2_features = poly2.fit_transform(x_vals)\n",
+    "mod2 = LinearRegression().fit(x2_features, y_vals)\n",
+    "\n",
+    "# Fit degree 3 polynomial regression\n",
+    "poly3 = PolynomialFeatures(degree = 3, include_bias = False)\n",
+    "x3_features = poly3.fit_transform(x_vals)\n",
+    "mod3 = LinearRegression().fit(x3_features, y_vals)\n",
+    "\n",
+    "# Add these to our predictions\n",
+    "preds['deg2_pred'] = mod2.predict(X = x2_features)\n",
+    "preds['deg3_pred'] = mod3.predict(X = x3_features)\n",
+    "preds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ee4681c",
+   "metadata": {},
+   "source": [
+    "Let's plot these lines and see how they look:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "059466ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First, let's make our data tidy for easier plotting\n",
+    "preds_long = preds.melt(\n",
+    "    id_vars = [\"logGdpPercap\", \"lifeExp\"],\n",
+    "    var_name = \"degree\",\n",
+    "    value_name = \"prediction\"\n",
+    ")\n",
+    "\n",
+    "preds_long\n",
+    "\n",
+    "# Now, let's take a look\n",
+    "sns.scatterplot(data = preds_long, \n",
+    "                x = \"logGdpPercap\",\n",
+    "                y = \"lifeExp\",\n",
+    "                color = \"m\",\n",
+    "                alpha = 0.1\n",
+    "               )\n",
+    "\n",
+    "sns.lineplot(\n",
+    "    data = preds_long,\n",
+    "    x = \"logGdpPercap\",\n",
+    "    y = \"prediction\",\n",
+    "    hue = \"degree\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2830d436",
+   "metadata": {},
+   "source": [
+    "These lines look pretty similar. Do we see any change in $R^2$ values for these models?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42c1873a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get R^2 for each model\n",
+    "mod1_rsq = deg1_fits.score(X = x_vals, y = y_vals)\n",
+    "mod2_rsq = mod2.score(X = x2_features, y = y_vals)\n",
+    "mod3_rsq = mod3.score(X = x3_features, y = y_vals)\n",
+    "\n",
+    "print(\"Degree 1 r^2: {} \\nDegree 2 r^2: {} \\nDegree 3 r^2: {}\".format(\n",
+    "    mod1_rsq, mod2_rsq, mod3_rsq\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c84e6fcb",
+   "metadata": {},
+   "source": [
+    "*What does this tell us? *\n",
+    "\n",
+    "...\n",
+    "\n",
+    "\n",
+    "*What happens if we try to fit a much higher-order polynomial function to this data?* Similar line or something else?\n",
+    "\n",
+    "\n",
+    "...\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1985978",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit degree 10 polynomial regression\n",
+    "poly10 = PolynomialFeatures(degree = 10, include_bias = False)\n",
+    "x10_features = poly10.fit_transform(x_vals)\n",
+    "mod10 = LinearRegression().fit(x10_features, y_vals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b97161f5",
+   "metadata": {},
+   "source": [
+    "Let's compare this one to our $R^2$ values above:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1a23f55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate R^2 for our degree 10 polynomial\n",
+    "mod10_rsq = mod10.score(X = x10_features, y = y_vals)\n",
+    "mod10_rsq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b61dae2",
+   "metadata": {},
+   "source": [
+    "Improvement! Let's keep going! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7504beb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit degree 25 polynomial regression\n",
+    "poly25 = PolynomialFeatures(degree = 25, include_bias = False)\n",
+    "x25_features = poly25.fit_transform(x_vals)\n",
+    "mod25 = LinearRegression().fit(x25_features, y_vals)\n",
+    "\n",
+    "# Check R^2\n",
+    "mod25_rsq = mod25.score(X = x25_features, y = y_vals)\n",
+    "mod25_rsq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d2655ab",
+   "metadata": {},
+   "source": [
+    "Okay maybe things are slowing down... \n",
+    "\n",
+    "Let's plot our functions and see how they look."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cc0b561",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add to predictions dataframe and re-format\n",
+    "preds['deg10_pred'] = mod10.predict(X = x10_features)\n",
+    "preds['deg25_pred'] = mod25.predict(X = x25_features)\n",
+    "\n",
+    "preds_long = preds.melt(\n",
+    "    id_vars = [\"logGdpPercap\", \"lifeExp\"],\n",
+    "    var_name = \"degree\",\n",
+    "    value_name = \"prediction\"\n",
+    ")\n",
+    "\n",
+    "preds_long\n",
+    "\n",
+    "# Now, let's take a look\n",
+    "sns.scatterplot(data = preds_long, \n",
+    "                x = \"logGdpPercap\",\n",
+    "                y = \"lifeExp\",\n",
+    "                color = \"m\",\n",
+    "                alpha = 0.1\n",
+    "               )\n",
+    "\n",
+    "sns.lineplot(\n",
+    "    data = preds_long,\n",
+    "    x = \"logGdpPercap\",\n",
+    "    y = \"prediction\",\n",
+    "    hue = \"degree\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b4bffe8",
+   "metadata": {},
+   "source": [
+    "Hmmm...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2405e0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lineplot(\n",
+    "    data = preds,\n",
+    "    x = \"logGdpPercap\",\n",
+    "    y = \"deg10_pred\",\n",
+    "    color = \"r\"\n",
+    ")\n",
+    "plt.xlabel(\"Income\")\n",
+    "plt.ylabel(\"Predicted life expectancy\")\n",
+    "plt.show()\n",
+    "\n",
+    "sns.lineplot(\n",
+    "    data = preds,\n",
+    "    x = \"logGdpPercap\",\n",
+    "    y = \"deg25_pred\",\n",
+    "    color = \"b\"\n",
+    ")\n",
+    "plt.xlabel(\"Income\")\n",
+    "plt.ylabel(\"Predicted life expectancy\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "002e44b3",
+   "metadata": {},
+   "source": [
+    "This doesn't seem like it's capturing the underlying process that generated our data...\n",
+    "\n",
+    "![spaghetti](img/spaghetti.jpeg)\n",
+    "\n",
+    "Aside: overfitting is easiest to demonstrate with polynomial regression because it makes Least Squares Spaghetti. However, this problem can arise in almost any modeling context. Think about what this might look like with *multiple regression*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0df230ee",
+   "metadata": {},
+   "source": [
+    "## Overfitting summary\n",
+    "\n",
+    "The high-degree polynomials above are **unconstrained**, leading them to fit our data *too* well.\n",
+    "\n",
+    "This creates worries that they won't **generalize**. \n",
+    "\n",
+    "*But how do we test this?*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10883110",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
   }
  ],
  "metadata": {
