most of lecture 16

--- a/Lectures/Lecture_16-pre.ipynb
+++ b/Lectures/Lecture_16-pre.ipynb
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2830d436",
+   "id": "b1818400",
    "metadata": {},
    "source": [
     "These lines look pretty similar. Do we see any change in $R^2$ values for these models?"
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42c1873a",
+   "id": "af23f6e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1985978",
+   "id": "77ad8030",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b97161f5",
+   "id": "5ff1fbda",
    "metadata": {},
    "source": [
     "Let's compare this one to our $R^2$ values above:\n"
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a23f55",
+   "id": "9a59c601",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b61dae2",
+   "id": "d7e8dcc6",
    "metadata": {},
    "source": [
     "Improvement! Let's keep going! "
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7504beb",
+   "id": "f5755582",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d2655ab",
+   "id": "4f39fa87",
    "metadata": {},
    "source": [
     "Okay maybe things are slowing down... \n",
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cc0b561",
+   "id": "c1eb7097",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b4bffe8",
+   "id": "66e8241d",
    "metadata": {},
    "source": [
     "Hmmm...."
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2405e0e",
+   "id": "7f8cdce5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "002e44b3",
+   "id": "53fdd74c",
    "metadata": {},
    "source": [
     "This doesn't seem like it's capturing the underlying process that generated our data...\n",
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df230ee",
+   "id": "c0e71129",
    "metadata": {},
    "source": [
     "## Overfitting summary\n",
@@ -694,10 +694,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10883110",
+   "id": "65daa0e5",
    "metadata": {},
    "source": [
     "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e210c1e",
+   "metadata": {},
+   "source": [
+    "# Cross-validation: avoiding overfitting\n",
+    "\n",
+    "\n",
+    "There are many different techniques for *cross-validation*, one of which we discussed on Friday. \n",
+    "\n",
+    "However, at their heart, all of them involve the same underlying principle: *estimate your model parameters with only a subset (or repeated subsets) of your data, then evaluate your model on the remaining data to ensure generalizability*.\n",
+    "\n",
+    "Rather than go through all of the different ways of doing this, I'll walk through a few of the more well known ones. This will give you a feel for how cross-validation works. \n",
+    "\n",
+    "1. ***Holdout* cross-validation**: this is the technique we reviewed on Friday\n",
+    "    - Split data into *training* and *test* data (e.g. 75-25 split)\n",
+    "    - Train model on *training data only*\n",
+    "    - Choose model that performs best on *test data* (may not be the one that was best on training data!)\n",
+    "2. ***k-fold* cross-validation**: This is a more robust version of holdout cross-validation\n",
+    "    - ...\n",
+    "3. ***Monte-carlo* cross-validation** (repeated random subsampling):\n",
+    "4. **Exhaustive cross-validation** (various methods):\n",
+    "    - The most common of these are *leave-one-out* or *leave-p-out* cross-validation\n",
+    "5. **Other** methods: specific to particular types of data (e.g., time series data, classification data)\n",
+    "\n",
+    "\n",
+    "For more info on this, you can check out [this](https://towardsdatascience.com/understanding-8-types-of-cross-validation-80c935a4976d) blog, or the wikipedia [page](https://en.wikipedia.org/wiki/Cross-validation_(statistics)) devoted to this topic, or many others like it online!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adb46dea",
+   "metadata": {},
+   "source": [
+    "## How it works\n",
+    "\n",
+    "Let's see how these techniques avoid the overfitting problems above \n",
+    "\n",
+    "[MAY NOT BE TIME FOR THIS]. Write it up and students can go through it on their own.\n",
+    "\n",
+    "Key: relationship between training loss and test loss as polynomial complexity increases (graphs from Ed lecture)\n",
+    "\n",
+    "TODO cehck Garrett lectures to see if there's anything else missing here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5be4a087",
+   "metadata": {},
+   "source": [
+    "# Cross-Validation Summary\n",
+    "\n",
+    "The techniques above are easy to illustrate with regression, but they generalize to most of the modeling techniques we'll discuss in the rest of the quarter. \n",
+    "\n",
+    "From here on out, you should **assume that some form of cross-validation is a *required* component of any model fitting process**, much like looking at your data, cleaning it, and other core aspects of analysis."
    ]
   }
  ],
