--- a/Lectures/Lecture_16-pre.ipynb
+++ b/Lectures/Lecture_16-pre.ipynb
@@ -90,7 +90,7 @@
     "# NOTE: we're also just restricting ourselves to 2007\n",
     "gap_subset = gap.loc[gap['year'] == 2007, ('country', 'year', 'lifeExp', 'pop', 'gdpPercap')].reset_index(drop = True)\n",
     "\n",
-    "# Add log population\n",
+    "# Add log transformed population and income\n",
     "gap_subset['logPop'] = np.log10(gap_subset['pop'])\n",
     "gap_subset['logGdpPercap'] = np.log10(gap_subset['gdpPercap'])\n",
     "gap_subset"
@@ -157,13 +157,13 @@
     "\n",
     "$x_1$, $x_2$, ..., $x_n$.\n",
     "\n",
-    "Simple linear regression assumes that our data $(x_i, y_i)$ has the following form:\n",
+    "Simple linear regression generates a *predicted* $\\hat{y}_i$ from $x_i$:\n",
     "\n",
-    "$y_i = \\beta_0 + \\beta_1 x_i + \\epsilon_i$\n",
+    "$\\hat{y}_i = \\beta_0 + \\beta_1 x_i + \\epsilon_i$\n",
     "\n",
-    "With multiple regression, we now extend this model to include multiple predictors for our data ($x_{1i}$, $x_{2i}$, ..., $x_{ni}$, $y_i$):\n",
+    "With multiple regression, we now extend this model to include multiple predictors for our data ($x_{1i}$, $x_{2i}$, ..., $x_{ni}$):\n",
     "\n",
-    "$y_i = \\beta_0 + \\beta_1 x_{1i} + \\beta_2 x_{2i} + \\ ... \\ + \\beta_n x_{ni} + \\epsilon_i $\n",
+    "$\\hat{y}_i = \\beta_0 + \\beta_1 x_{1i} + \\beta_2 x_{2i} + \\ ... \\ + \\beta_n x_{ni} + \\epsilon_i $\n",
     "\n",
     "In most cases, multiple regression once again uses the same *Ordinary Least Squares* (OLS) parameter estimation as simple regression. However, interpreting the parameter estimates is a little less straightforward.\n",
     "\n",
@@ -282,13 +282,11 @@
     "\n",
     "Regression is one of the most powerful tools in our data science / analysis toolkit. \n",
     "\n",
-    "Many problems with understanding and predicting data can be distilled down to basic regression.\n",
-    "\n",
     "However, it's important to be familiar with the *limitations* in regression as well. \n",
     "\n",
     "One class of these limitations is when **the data violate the assumptions of linear regression**. We're *not* going to get into these issues in this class, but it's good to be aware that not all data (even data that looks linear!) can be accurately described by linear regression. There are a number of tricks for diagnosing this, such as plotting your residuals (we may explore this on the problem set as a way to cover some of this material).\n",
     "\n",
-    "However, an important limitation that we *will* discuss now is when **regression overfits the data**. Avoiding overfitting is something that arises in virtually all modeling contexts. It's easiest to illustrate with regression, but the things we discuss here will be relevant throughout the remainder of the quarter."
+    "However, an important limitation that we *will* discuss now is when **regression overfits the data**. Avoiding overfitting is something that arises in just about any modeling context. It's easiest to illustrate with regression, but the things we discuss here will be relevant throughout the remainder of the quarter."
    ]
   },
   {
@@ -330,7 +328,7 @@
    "source": [
     "## Example\n",
     "\n",
-    "Let's return to our `gapminder` dataset and the task of predicting *life expectancy* ($y$ based on *income* ($x$).\n",
+    "Let's return to our `gapminder` dataset and the task of predicting *life expectancy* ($y$) based on *income* ($x$).\n",
     "\n",
     "What kind of relationship do we think these variables have in the data below?"
    ]
@@ -441,7 +439,9 @@
     "# Add these to our predictions\n",
     "preds['deg2_pred'] = mod2.predict(X = x2_features)\n",
     "preds['deg3_pred'] = mod3.predict(X = x3_features)\n",
-    "preds"
+    "preds\n",
+    "\n",
+    "# How do these predictions look at first glance? More accurate?"
    ]
   },
   {
@@ -504,7 +504,7 @@
     "mod2_rsq = mod2.score(X = x2_features, y = y_vals)\n",
     "mod3_rsq = mod3.score(X = x3_features, y = y_vals)\n",
     "\n",
-    "print(\"Degree 1 r^2: {} \\nDegree 2 r^2: {} \\nDegree 3 r^2: {}\".format(\n",
+    "print(\"Degree 1 R^2: {} \\nDegree 2 R^2: {} \\nDegree 3 R^2: {}\".format(\n",
     "    mod1_rsq, mod2_rsq, mod3_rsq\n",
     "))"
    ]
@@ -514,7 +514,7 @@
    "id": "c84e6fcb",
    "metadata": {},
    "source": [
-    "*What does this tell us? *\n",
+    "*What does this tell us?*\n",
     "\n",
     "...\n",
     "\n",
@@ -710,39 +710,32 @@
     "\n",
     "There are many different techniques for *cross-validation*, one of which we discussed on Friday. \n",
     "\n",
-    "However, at their heart, all of them involve the same underlying principle: *estimate your model parameters with only a subset (or repeated subsets) of your data, then evaluate your model on the remaining data to ensure generalizability*.\n",
+    "However, at their heart, all of them involve the same underlying principle: *estimate your model parameters with only a subset (or repeated subsets) of your data, then evaluate your model on the remaining data to ensure generalizability*. \n",
+    "\n",
+    "This technique allows you to ensure that your model is a good fit, or do *model comparison* to choose among different candidate models (such as our polynomial models above).\n",
     "\n",
     "Rather than go through all of the different ways of doing this, I'll walk through a few of the more well known ones. This will give you a feel for how cross-validation works. \n",
     "\n",
     "1. ***Holdout* cross-validation**: this is the technique we reviewed on Friday\n",
     "    - Split data into *training* and *test* data (e.g. 75-25 split)\n",
     "    - Train model on *training data only*\n",
-    "    - Choose model that performs best on *test data* (may not be the one that was best on training data!)\n",
+    "    - Evaluate model on *test data*\n",
     "2. ***k-fold* cross-validation**: This is a more robust version of holdout cross-validation\n",
-    "    - ...\n",
-    "3. ***Monte-carlo* cross-validation** (repeated random subsampling):\n",
-    "4. **Exhaustive cross-validation** (various methods):\n",
-    "    - The most common of these are *leave-one-out* or *leave-p-out* cross-validation\n",
+    "    - Split data into *k* equal sized buckets (randomly!)\n",
+    "    - Choose one of the buckets to be *test* data and assign the rest to be *training* data\n",
+    "    - Perform holdout cross-validation with this data\n",
+    "    - Then, repeat the above *for each of the other buckets* and average your test results (e.g., MSE) over the multiple runs\n",
+    "3. ***Monte-carlo* cross-validation** (repeated random subsampling): Similar to k-fold, but *random*\n",
+    "    - Split the data into training and test data randomly\n",
+    "    - Evaluate model on test data\n",
+    "    - Repeat this process many times\n",
+    "4. **Exhaustive cross-validation** (various methods): The most common of these are *leave-one-out* or *leave-p-out* cross-validation\n",
+    "    - For every individual value in the data or set of $p$ values, train the model on all remaining data then evalute the model using this individual or set of $p$ values\n",
+    "    - Note: this is *exhaustive* because every data point or set of $p$ data points is used in the test set, but is often computationally intractable!\n",
     "5. **Other** methods: specific to particular types of data (e.g., time series data, classification data)\n",
     "\n",
     "\n",
     "For more info on this, you can check out [this](https://towardsdatascience.com/understanding-8-types-of-cross-validation-80c935a4976d) blog, or the wikipedia [page](https://en.wikipedia.org/wiki/Cross-validation_(statistics)) devoted to this topic, or many others like it online!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "adb46dea",
-   "metadata": {},
-   "source": [
-    "## How it works\n",
-    "\n",
-    "Let's see how these techniques avoid the overfitting problems above \n",
-    "\n",
-    "[MAY NOT BE TIME FOR THIS]. Write it up and students can go through it on their own.\n",
-    "\n",
-    "Key: relationship between training loss and test loss as polynomial complexity increases (graphs from Ed lecture)\n",
-    "\n",
-    "TODO cehck Garrett lectures to see if there's anything else missing here."
    ]
   },
   {
@@ -752,7 +745,7 @@
    "source": [
     "# Cross-Validation Summary\n",
     "\n",
-    "The techniques above are easy to illustrate with regression, but they generalize to most of the modeling techniques we'll discuss in the rest of the quarter. \n",
+    "The techniques above are used with many if not all of the modeling techniques we'll discuss this quarter. \n",
     "\n",
     "From here on out, you should **assume that some form of cross-validation is a *required* component of any model fitting process**, much like looking at your data, cleaning it, and other core aspects of analysis."
    ]
